<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/menu_home"
        android:title="@string/navigation_item_home"
        />
    <item
        android:id="@+id/vocabularyFragment"
        android:enabled="true"
        android:icon="@drawable/menu_vocabulary"
        android:title="@string/navigation_item_vocabulary"/>

    <item
        android:id="@+id/quizMainFragment"
        android:enabled="true"
        android:icon="@drawable/menu_quiz"
        android:title="@string/navigation_item_quiz"/>

    <item
        android:id="@+id/myPageFragment"
        android:enabled="true"
        android:icon="@drawable/menu_my"
        android:title="@string/navigation_item_my"/>

</menu>