<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".hangman.intro.ui.IntroHangmanFragment">

    <data>
        <variable
            name="introHangmanViewModel"
            type="com.sangik.iluvbook.hangman.intro.viewmodel.IntroHangmanViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hangman_intro_frame"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btn_chevron_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chevron_back"
            android:background="@android:color/transparent"
            android:layout_marginTop="13dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/hangman_intro_banner_image" />

        <ImageView
            android:id="@+id/intro_banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="78dp"
            android:layout_marginBottom="268dp"
            android:background="@drawable/start_hangman_intro"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/intro_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hangman_intro_title"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:textAppearance="@style/HangmanIntroTitle"
            app:layout_constraintTop_toBottomOf="@id/intro_banner"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/intro_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hangman_intro_not_funny"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textAppearance="@style/HangmanIntroContent"
            app:layout_constraintTop_toBottomOf="@id/intro_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageButton
            android:id="@+id/btn_start_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_start_game"
            android:layout_marginTop="54dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/game_start_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>